--- a/index.html
+++ b/index.html
@@ -15,11 +15,14 @@
 </head>
 
 <body>
+
     <!-- Barra de navegación -->
     <header class="hero">
         <nav class="nav__hero">
             <div class="container nav__container">
-                <div class="logo"><h2 class="logo__name">oasis</h2></div>
+                <div class="logo">
+                    <h2 class="logo__name">oasis</h2>
+                </div>
                 <div class="links">
                     <a href="#" class="link">Home</a>
                     <a href="discografia.html" class="link">Discografía</a>
@@ -28,8 +31,10 @@
                 </div>
             </div>
         </nav>
+    </header>
 
-
+    <!-- SECCION PRINCIPAL -->
+    <main class="main__index">
         <section class="container hero__main">
             <div class="hero__textos">
                 <h1 class="title">La mejor <span class="title--active">música de los 90's.</span></h1>
@@ -37,52 +42,53 @@
                     <span class="logo__name--modifier">oasis </span>?
                     <br>
                     <span class="copy__active" id="cambiar">Tenés la discografía completa?</span>
+
                 </p>
-                <button class="cta" id="boton">Enterate ya!</button>
+                <button class="cta" id="boton">¡Enterate acá!</button>
             </div>
-            <img src="contenido_multimedia/mockup.jpg" class="mockup">
-
+            <img src="resourses/mockup.jpg" class="mockup">
         </section>
-    </header>
-
-    <main>
         <section class="email container container--modifier">
             <h2 class="subtitle subtitle--modifier" id="parrafoPrueba">Te gustaría formar parte del staff <span
                     class="point">?</span></h2>
 
-            <p class="copy__section copy__section--modifier">Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                Ab, et dolore id necessitatibus quibusdam rem accusamus fugiat doloremque voluptatibus eius!</p>
+            <p class="copy__section copy__section--modifier">Somos un grupo de fans apasionados por Oasis.
+                Buscamos una persona que sepa inglés avanzado
+                y se comprometa con los plazos de entrega. <br>Esa persona sos vos? 
+            </p>
+
 
             <div class="check">
                 <div class="check__item">
                     <i class='bx bx-check'></i>
                     <div class="check__numbers">
-                        <p class="check__number">+200</p>
-                        <p class="check__copy">Proyectos exitosos</p>
+                        <p class="check__number">+75</p>
+                        <p class="check__copy">Letras interpretadas.</p>
                     </div>
                 </div>
                 <div class="check__item">
                     <i class='bx bx-check'></i>
                     <div class="check__numbers">
-                        <p class="check__number">+200</p>
-                        <p class="check__copy">Proyectos exitosos</p>
+                        <p class="check__number">+48</p>
+                        <p class="check__copy">Discos online.</p>
                     </div>
                 </div>
                 <div class="check__item">
                     <i class='bx bx-check'></i>
                     <div class="check__numbers">
-                        <p class="check__number">+200</p>
-                        <p class="check__copy">Proyectos exitosos</p>
+                        <p class="check__number">20</p>
+                        <p class="check__copy">Entradas de blog.</p>
                     </div>
                 </div>
             </div>
+
             <fieldset>
                 <form action="#" method="GET" id="formulario-staff">
-                    <h4 class="copy__section copy__section--modifier">FORMULARIO</h4>
+                    <h4 class="copy__section copy__section--modifier">¡Sumate ahora!</h4>
                     <input class="newsletter__input"  id="scriptBox" type="text" name="titulo"placeholder="Escriba aqui" onkeypress="capturarEnter(event);" >
                     <button class="boton cta" type="submit">Enviar</button>
                 </form>
-                <ul id="staff-contenedor">
+                <ul class="list__staff" id="staff-contenedor">
                     <li>Noel Gallagher</li>
                     <li>Liam Gallagher</li>
                     <li>Gem Archer</li>
@@ -93,27 +99,12 @@
     </main>
 
     <footer class="footer">
-        <div class="contact">
-            <div class="item__contact">
-                <i class='bx bx-copyright contact__icon'></i>
-                <h3 class="contact__title">Johanna Palo</h3>
-            </div>
-            <div class="item__contact">
-                <i class='bx bx-mail-send contact__icon'></i>
-                <h3 class="contact__title">oasis_fanpage@gmail.com</h3>
-            </div>
-            <div class="item__contact">
-                <i class='bx bxs-edit-location contact__icon'></i>
-                <h3 class="contact__title">Ubicacion</h3>
-            </div>
-            <div class="item__contact item__contact--gold">
-                <i class='bx bxs-chat contact__icon contact__icon--modifier'></i>
-                <h3 class="contact__title">Contactanos ahora</h3>
-            </div>
-        </div>
+        <p>Johanna Palo Bael &copy;</p>
     </footer>
-    <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
+    <!-- SCRIPTS -->
     <script src="scripts.js"></script>
+    <!-- JQUERY -->
+    <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
 </body>
 
 </html>
