YA casi esta todo listo

--- a/index.html
+++ b/index.html
@@ -108,6 +108,7 @@
     </footer>
     <!-- SCRIPTS -->
     <script src="js/scripts_index.js"></script>
+    <script src="js/scripts_comunes.js"></script>
     <!-- JQUERY -->
     <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
 </body>
