--- a/blog.html
+++ b/blog.html
@@ -4,10 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/styles.css">
+    <!-- Box icons -->
     <link href='https://cdn.jsdelivr.net/npm/boxicons@2.0.5/css/boxicons.min.css' rel='stylesheet'>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css"/>
-    <link rel="stylesheet" href="css/helper-classes.css">    
+    <!-- Font Awesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css" />
+    <!-- Estilos CSS -->
+    <link rel="stylesheet" href="css/styles.css">   
     <title>Blog</title>
 </head>
 
@@ -16,18 +18,16 @@
         <nav class="nav__hero">
             <div class="container nav__container">
                 <div class="logo">
-
                     <h2 class="logo__name">oasis</h2>
                 </div>
                 <div class="links">
                     <a href="index.html" class="link">Home</a>
-                    <a href="discografia.html" class="link">Discografía</a>
                     <a href="#" class="link">Blog</a>
-                    <a href="#" class="link">Tienda</a>
-                    <a href="#" class="link link--active">Contacto</a>
+                    <a href="tienda.html" class="link link--active">Tienda</a>
                 </div>
             </div>
         </nav>
+    </header>
 
         <section class="services">
             <div class="container">
@@ -36,7 +36,7 @@
 
                 <article class="container-cards">
                     <div class="card">
-                        <img src="contenido_multimedia/image2.jpg" class="card__img">
+                        <img src="resourses/image1.jpg" class="card__img">
                         <div class="cards__text">
                             <p class="card__list">Lorem ipsum dolor sit.</p>
                             <h3 class="card__title">Lorem, ipsum.<span class="point">.</span></h3>
@@ -46,7 +46,7 @@
                         </div>
                     </div>
                     <div class="card">
-                        <img src="contenido_multimedia/image1.jpg" class="card__img">
+                        <img src="resourses/image2.jpg" class="card__img">
                         <div class="cards__text">
                             <p class="card__list">Lorem ipsum dolor sit.</p>
                             <h3 class="card__title">Lorem, ipsum.<span class="point">.</span></h3>
@@ -56,7 +56,7 @@
                         </div>
                     </div>
                     <div class="card">
-                        <img src="contenido_multimedia/image3.jpg" class="card__img">
+                        <img src="resourses/image3.jpg" class="card__img">
                         <div class="cards__text">
                             <p class="card__list">Lorem ipsum dolor sit.</p>
                             <h3 class="card__title">Lorem, ipsum.<span class="point">.</span></h3>
@@ -68,28 +68,13 @@
                 </article>
             </div>
         </section>
-    </header>
     <footer class="footer">
-        <div class="contact">
-            <div class="item__contact">
-                <i class='bx bx-copyright contact__icon'></i>
-                <h3 class="contact__title">Johanna Palo</h3>
-            </div>
-            <div class="item__contact">
-                <i class='bx bx-mail-send contact__icon'></i>
-                <h3 class="contact__title">oasis_fanpage@johannapalo.com</h3>
-            </div>
-            <div class="item__contact">
-                <i class='bx bxs-edit-location contact__icon'></i>
-                <h3 class="contact__title">Paseos de la reforma</h3>
-            </div>
-            <div class="item__contact item__contact--gold">
-                <i class='bx bxs-chat contact__icon contact__icon--modifier'></i>
-                <h3 class="contact__title">Contactanos ahora</h3>
-            </div>
-        </div>
+        <p>Johanna Palo Bael &copy;</p>
     </footer>
 </body>
-<script src="https://code.jquery.com/jquery-3.5.1.js"></script>
-<script src="scripts.js"></script>
+    <!-- SCRIPTS -->
+    <script src="js/scripts_index.js"></script>
+    <script src="js/scripts_comunes.js"></script>
+    <!-- JQUERY -->
+    <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
 </html>
